fix: align 'img' container with text more legible and add min-width to not wrap a new line

--- a/src/style.css
+++ b/src/style.css
@@ -219,17 +219,24 @@ form {
 
         & .img__container {
             display: flex;
-            gap: 12px;
+            align-items: center;
+            gap: 18px;
+        }
+
+        & img {
+            width: 80px;
+            height: 80px;
         }
 
         & .week__desc {
-            font-size: 1.3rem;
+            font-size: 1.4rem;
         }
     }
 
     & .week__temp {
         display: flex;
         align-items: center;
+        min-width: 15ch;
 
         & .week__desc {
             font-size: 1.5rem;
